2025-09-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Make titles for derived units without special symbols more consistent
	* Automatically update calculate-as-you-type calculations every second when the expression contains now or uptime variable, or time() function
	* Automatically calculate expression with "to"-operator even if it contains no other operator or number
	* Fix id of uptime variable (was same as id for plus infinity)

2025-09-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add Kayser, Lambert, Foot-Lambert, Darcy, and Millidarcy units
	* Fix unit selection for automatic conversion from single unit with quantity one in some cases (e.g. barye)

2025-09-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use mol as base unit for Einstein and clarify that Einstein refers to one mole of pohoton
	* Match object name on words after underscore, e.g. oz in fl_oz (find/list command)
	* Move (micro)einstein/(m²⋅s) to new category (molar flux) and add corresponding SI units

2025-09-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix inequality with 1/f(x) on one side, e.g. "1/(x-2) <= 2"
	* Add erg/(cm²⋅s) unit
	* Lower max bit width in bitrot(), bitset(), and setbits() functions, and max steps in shift()

2025-09-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix endless loop in Calculator::hasToExpression() with expression containing negative circled sans-serif digit dingbat
	* Add (reduced) compton wavelength for muon, neutron, proton, and tau
	* Add ƛ_C symbol to reduced compton wavelength and change alternative symbol for natural unit of length to ƛ_unit
	* Stricter command argument in command() function
	* Fix search term with more than one word and search for word preceded by parenthesis in title
	* Specify minimal vector size for linearfit(), quadraticfit(), and cubicfit() functions

2025-09-15 Hanna Knutsson <hanna.knutsson@protonmail.com>
